Get products working

--- a/public_html/addUser.html
+++ b/public_html/addUser.html
@@ -54,7 +54,7 @@
     }
 </script>
 <div class="container" style="align-content: center;">
-    <form name="NewUser" action="/users/login" enctype="multipart/form-data" method="POST">
+    <form name="NewUser" enctype="multipart/form-data" method="POST">
         <div class="form-group">
             <label for="name">Nombre:</label>
             <input type="text" class="form-control" id="name" name="name" placeholder="Ingresa Nombre">
