--- a/public_html/admin.html
+++ b/public_html/admin.html
@@ -27,7 +27,7 @@
     </nav>
 
     <div class="container" style="align-content: center;">
-        <form name="newProd" action="/users/login" enctype="multipart/form-data" method="POST">
+        <form name="newProd" enctype="multipart/form-data" method="POST">
             <div class="form-group">
                 <label for="barcode">Codigo:</label>
                 <input type="text" class="form-control" id="barcode" name="barcode" placeholder="1235123">
