--- a/public_html/user.html
+++ b/public_html/user.html
@@ -12,3 +12,171 @@
 </head>
 
 <body style="background: rgb(216,224,222);">
+<script>
+    var email = "";
+    var products = [];
+
+    function getProducts(){
+        $.ajax({
+            url:'/product/products',
+            cache:false,
+            method:'GET',
+            type: 'GET',
+            success: function(data){
+                products = data;
+
+                console.log(data);
+                
+                products.forEach((product,idx) => {
+                    product.photo = product.photo.replace('./public_html/','');
+                    $("#prodtblbdy").append(
+                        "<tr>"+
+                            "<td>"+product.barcode+"</td>"+
+                            "<td>"+product.name+"</td>"+
+                            "<td>"+product.quantity+"</td>"+
+                            "<td><img src='"+product.photo+"' class='img-responsive' style=height:130px!important;width:auto!important/></td>"+
+                            "<td><button type='button' class='btn btn-primary' onclick='addToCart("+idx+");'>Agregar al carrito</button></td>"+
+                        "</tr>"
+                    )
+                });
+            },error:function(err){
+                console.log(err);
+            }
+        })
+    }
+
+    function addToCart(itemNo) {
+        console.log(products[itemNo]);
+    }
+
+    function doEdit() {
+        var data = new FormData();
+
+        data.append("password", $("#password")[0].value);
+        data.append("email", window.email);
+        data.append("name", $("#name")[0].value);
+        data.append("role", $("#role")[0].value);
+        data.append("photo", $("#photo")[0].files[0]);
+
+        $.ajax({
+            url: "/users/update",
+            data: data,
+            cache: false,
+            contentType: false,
+            processData: false,
+            method: 'POST',
+            type: 'POST', // For jQuery < 1.9
+            success: function(data) {
+                alert("Se guardaron sus datos exitosamente!");
+            },error: function (err) {
+                console.log(err);
+            }
+        });
+    }
+
+    $(document).ready(function(){
+        let href = window.location.href;
+        window.email = href.split('=')[1];
+        
+        console.log(window.email);
+        getProducts();
+    })
+</script>
+
+<nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="user.html" >AMEISON</a>
+        </div>
+        <ul class="nav navbar-nav">
+            <li class="active"><a href="user.html">Productos</a></li>
+            <li class=""><a href="#">Editar Perfil</a></li>
+            <li class=""><a href="#">Carrito</a></li>
+            <li class=""><a href="#">Salir</a></li>
+        </ul>
+    </div>
+</nav>
+<div class="container">
+    <h1>Productos</h1>
+<table id="allProducts" class="table table-striped table-bordered table-condensed">
+    <thead class="thead-dark">
+        <tr>
+            <th>Código de barras</th>
+            <th>Nombre común</th>
+            <th>Cantidad</th>
+            <th></th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody id="prodtblbdy">
+    </tbody>
+</table>
+
+<br/><br/>
+<h1>Editar Perfil</h1>
+<div class="container" style="align-content: center;">
+    <form name="NewUser" enctype="multipart/form-data" method="POST">
+        <div class="form-group">
+            <label for="name">Nombre:</label>
+            <input type="text" class="form-control" id="name" name="name" placeholder="Ingresa Nombre">
+        </div>
+        <!--<div class="form-group">-->
+            <!--<label for="email">Email:</label>-->
+            <!--<input type="email" class="form-control" id="email" name="email" placeholder="Ingresa tu mail">-->
+        <!--</div>-->
+        <div class="form-group">
+            <label for="password">Contraseña:</label>
+            <input type="password" class="form-control" id="password" name="password" placeholder="Ingresa Contraseña">
+        </div>
+        <div class="form-group">
+            <label for="photo">Foto:</label>
+            <input type="file" name="photo" id="photo" />
+        </div>
+        <div class="form-group">
+            <label for="role">Tipo de Cta:</label>
+            <select id="role" name="role">
+                <option value="ADMIN">Admin</option>
+                <option value="USER">USER</option>
+            </select>
+        </div>
+
+        <div class="container col-2">
+            <button class="btn btn-default btn-danger pull-left"><a href="user.html" style="color:#fff;">Cancelar</a></button>
+
+            <button type="button" class="btn btn-default btn-success pull-right" onclick="doEdit();">Ingresar</button>
+        </div>
+    </form>
+</div>
+
+<br/><br/>
+
+<a href="#" onclick="getCart();">Reload cart</a>
+<table id="allProducts">
+    <tr>
+
+        <th>Producto</th>
+        <th></th>
+    </tr>
+    <tr>
+
+        <th>ASDCASDC</th>
+        <th><button onclick="deleteFromCart(itemValue, userId)">Quitar del Carrito</button></th>
+    </tr>
+</table>
+<br/><br/>
+<div class="container col-2 ">
+    <!--<button class="btn btn-default btn-primary pull-left"><a href="index.html" style="color:#fff;">Seguir Comprando</a></button>-->
+
+    <button class="btn btn-default btn-success pull-right" onclick="makeTransaction(itemValue, userId);">Pagar</button>
+</div>
+
+<br/><br/>
+
+<h1> Deseas cerrar sesión?</h1>
+<div class="container col-2 ">
+    <!--<button class="btn btn-default btn-primary pull-left"><a href="index.html" style="color:#fff;">Cancelar</a></button>-->
+
+    <button class="btn btn-default btn-danger pull-right" onclick="logOut(userId);">Salir</button>
+</div>
+</div>
+</body>
